# Unitboardmonitoringdashboard

./: .gitignore  CLAUDE.md  JSON_SERVER_GUIDE.md  PROJECT_STRUCTURE.md  README.md  index.html  package-lock.json  package.json  session-report-20260507-2218.html  skills-lock.json  vite.config.ts
.claude/: settings.json  settings.local.json
.cursor/commands/: cursoraiguide.md
.cursor/rules/: db.mdc  fileupdate.mdc  prd.mdc
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
backend/: README.md  main.py  pyproject.toml  requirements.txt  sensor_data.db-journal  test.csv  test_framing.py
backend/app/: __init__.py  config.py  main.py
backend/app/controllers/: gpio.py  history.py  recipe.py  unit.py  websocket.py
backend/app/ini/: sys.ini
backend/app/models/: __init__.py  gpio.py  protocol.py  sensor.py  unit.py
backend/app/services/: db_service.py  state_manager.py  tcp_bridge.py  unit_manager.py  websocket_service.py
backend/app/utils/: logger.py
reference/: data1.json  data1_60.json  data1_60_37ea.json  data2.json  data3.json  ref1.json  ref1_10sec.json  ref2.json  ref3.json  status.json
sensor_view/: README.md  app.py  requirements.txt
src/: App.tsx  CURSOR_AI_GUIDE.md  config.ts  index.css  main.tsx
src/components/: DashboardPanel.tsx  FunctionButtonPanel.tsx  GPIOControlPanel.tsx  StatusMonitoringCard.tsx
src/contexts/: WebSocketContext.tsx
src/hooks/: useWebSocket.ts
src/services/: api.ts
src/styles/: globals.css
(+1 files in other folders)
