[tool.poetry]
name = "unitboard-control-backend"
version = "0.1.0"
description = "Unit Board Monitoring & Control System Backend"
authors = ["M-FACTORY"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
litestar = "^2.0.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.0.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

